[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropgrad"
version = "0.1.0"
dependencies = ["pytorch"]
authors = [
    {name = "Ryan Taylor", email = "ryan@beta-reduce.net"}
]
maintainers = [
    {name = "Ryan Taylor", email = "ryan@beta-reduce.net"}
]
description = "A PyTorch implementation of DropGrad regularization."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["neural networks", "machine learning", "pytorch"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.urls]
Repository = "https://github.com/dingo-actual/dropgrad"